cmake_minimum_required(VERSION 3.16)
project(project_main)

set(CMAKE_CXX_STANDARD 14)

add_executable(project_main
        main.cpp
        AddAutomaton.cpp
        AddAutomaton.h
        ColonAutomaton.cpp
        ColonAutomaton.h
        ColonDashAutomaton.cpp
        ColonDashAutomaton.h
        CommaAutomaton.cpp
        CommaAutomaton.h
        CommentAutomaton.cpp
        CommentAutomaton.h
        Database.cpp
        Database.h
        DatalogProgram.cpp
        DatalogProgram.h
        FactsAutomaton.cpp
        FactsAutomaton.h
        Header.h
        IDAutomaton.cpp
        IDAutomaton.h
        Interpreter.cpp
        Interpreter.h
        LeftParenAutomaton.cpp
        LeftParenAutomaton.h
        Lexer.cpp
        Lexer.h
        MultiplyAutomaton.cpp
        MultiplyAutomaton.h
        Parameter.h
        Parser.cpp
        Parser.h
        PeriodAutomaton.cpp
        PeriodAutomaton.h
        Predicate.h
        QueriesAutomaton.cpp
        QueriesAutomaton.h
        QuestionMarkAutomaton.cpp
        QuestionMarkAutomaton.h
        Relation.h
        RightParenAutomaton.cpp
        RightParenAutomaton.h
        Rule.h
        RulesAutomaton.cpp
        RulesAutomaton.h
        SchemesAutomaton.cpp
        SchemesAutomaton.h
        StringAutomaton.cpp
        StringAutomaton.h
        Token.cpp
        Token.h
        Tuple.h
        WhitespaceAutomaton.cpp
        WhitespaceAutomaton.h
        )
